[package]
name = "kawaii_cleaner"
version = "3.1.0"
edition = "2021"
authors = ["System Utilities"]
description = "Safe Temporary File Management Tool"

[dependencies]
# --- Safe Async Runtime ---
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"

# --- UI Engine ---
ratatui = "0.27"  # Keeping 0.27 for compatibility
crossterm = "0.27"
humansize = "2.1"

# --- System Intelligence ---
sysinfo = "0.30"
walkdir = "2.4"
directories = "5.0"
chrono = "0.4"

# --- Windows Integration (Minimal & Safe) ---
[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_UI_Shell", # Only Shell APIs are needed for Recycle Bin
    "Win32_System_SystemInformation",
]

[build-dependencies]
winres = "0.1"

# --- Release Profile ---
# Optimization to make the binary smaller and cleaner
[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
