[package]
name = "kawaii_cleaner_pro"
version = "5.1.0"
edition = "2021"

[dependencies]
# --- Core Runtime ---
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"

# --- UI Engine ---
ratatui = "0.27" # Keeping specific version for compatibility
crossterm = "0.27"
rand = "0.8" # For evasion jitter
chrono = "0.4" # For log timestamps


# --- Windows Native Interface (The Magic) ---
[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_UI_Shell",
    "Win32_System_Ole", # Required for COM interactions
    "Win32_System_Diagnostics_Debug", # For Anti-Analysis
    "Win32_UI_Input_KeyboardAndMouse", # For User Interaction Check
    "Win32_System_SystemInformation", # For Uptime/TickCount
    "Win32_System_Diagnostics_ToolHelp", # For Process Scanning
    "Win32_Security", # For Token/Admin Checks
    "Win32_System_Threading", # For OpenProcessToken
    "Win32_UI_WindowsAndMessaging", # For GetCursorPos (User32)
    "Win32_Storage_FileSystem", # For MoveFileEx (Grim Reaper)
    "Win32_System_LibraryLoader", # For IAT Camouflage (LoadLibrary)
    "Win32_System_Registry", # For Registry Hunter
    "Win32_System_SystemServices", # For Heisenberg (PE Parsing)
]

#[build-dependencies]
#winres = "0.1"

# --- Build Optimization (Stealth Profile) ---
# --- Standard Release Profile (Safe for AV) ---
[profile.release]
opt-level = "z"      # Optimize for size (low memory)
lto = false          # Explicitly disable LTO to prevent OOM
strip = "debuginfo"  # Strip debug info but keep symbols for stability
codegen-units = 1    # Slow, single-threaded codegen (stable)
incremental = false
